<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="ServoGVLs" Id="{cc4dc48c-eb34-470f-99d5-70c06511e300}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	servo1Interface		: stServoInterface;
	servo2Interface		: stServoInterface;
	
	rTorqueLimit AT %Q*		: INT;
	rTorqueAct	 AT %I*		: INT;
	
	probe1Signal AT %I*		: WORD;
	probe1NegLatch AT %I*		: WORD;
	probe1PosLatch AT %I*		: WORD;
	
	probe1Enable AT %Q*		: WORD;
	probe1Command AT %Q*		: WORD;
	
	coeRead : FB_CoERead;
	catchWord : WORD;
	toggle : BOOL;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>